storage: Fix gap in Anaconda mode

--- a/pkg/storaged/storage-anaconda.scss
+++ b/pkg/storaged/storage-anaconda.scss
@@ -4,6 +4,7 @@
     border-radius: 0;
     margin: 0;
     border: 0;
+    max-block-size: 100%;
   }
 
   .pf-v6-c-page__main {
